Changed some css to the naivgation bar

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -331,3 +331,8 @@ span.label-wrap{
 .well-danger{
   background-color: #f2dede;
 }
+
+.breadcrumb > li:hover:not(.active){
+  cursor: pointer;
+  text-decoration : underline;
+}
