--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -192,7 +192,7 @@
 					<div class="span1"></div>
 					<div class="span10">
 						<div class="row-fluid">
-							<input class="span12" id="keyword" type="text" placeholder="<%= raw t 'newmodal.filtering.title' %>" onkeyup="askUpdateKeywordTable();return false;">
+							<input class="span12" id="keyword" type="text" placeholder="<%= raw t 'newmodal.filtering.title' %>" onkeypress="if (event.keyCode == 13) return false;" onkeyup="askUpdateKeywordTable();return false;">
 						</div>
 					</div>
 				</div>
