--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -51,17 +51,19 @@
 									</div>
 									<div class="formContent">
 										<div class="row-fluid">
-											<div class="span12 input-prepend">
+											<div class="span12 input-prepend input-append">
 												<div class="span1"></div>
 												<span class="add-on"><b>@</b></span>
-												<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holderpersonn' %>" onKeyPress="if (event.keyCode == 13){ addSource('Twitter','#loginTwitter');return false;}">
+												<input name="inputLogin" type="text" class="inputLogin span9" id="loginTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holderpersonn' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#loginTwitter');return false;}else if(event.keyCode == 13){return false;}">
+												<button type="button" class="btn btn-info" onclick="if ($('#loginTwitter').val()!='') addSource('Twitter','#loginTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
 											</div>
 										</div>
 										<div class="row-fluid">
-											<div class="span12 input-prepend">
+											<div class="span12 input-prepend input-append">
 												<div class="span1"></div>
 												<span class="add-on"><b>#</b></span>
-												<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holdertag' %>" onKeyPress="if (event.keyCode == 13){ addSource('Twitter','#searchTwitter');return false;}" />
+												<input name="inputSearch" type="text" class="inputSearch span9" id="searchTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holdertag' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#searchTwitter');return false;}else if(event.keyCode == 13){return false;}" />
+												<button type="button" class="btn btn-info" onclick="if ($('#searchTwitter').val()!='') addSource('Twitter','#searchTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -102,10 +104,11 @@
 									</div>
 									<div class="formContent">
 										<div class="row-fluid">
-											<div class="span12 input-prepend">
+											<div class="span12 input-prepend input-append">
 												<div class="span1"></div>
 												<span class="add-on"><i class="icon-search"></i></span>
-												<input name="inputSearch" id="searchRSS" type="text" class="inputSearch span10" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.rss.holderurl' %>" onKeyPress="if (event.keyCode == 13){addSource('RSS','#searchRSS');return false;}">
+												<input name="inputSearch" id="searchRSS" type="text" class="inputSearch span9" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.rss.holderurl' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){addSource('RSS','#searchRSS');return false;}else if(event.keyCode == 13){return false;}">
+												<button type="button" class="btn btn-warning" onclick="if ($('#searchRSS').val()!='') addSource('RSS','#searchRSS');return false;"><%= raw t 'newmodal.sources.add' %></button>
 											</div>
 										</div>
 										<div class="row-fluid">
