--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -55,7 +55,7 @@
 												<div class="span1"></div>
 												<span class="add-on"><b>@</b></span>
 												<input name="inputLogin" type="text" class="inputLogin span9" id="loginTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holderpersonn' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#loginTwitter');return false;}else if(event.keyCode == 13){return false;}">
-												<button type="button" class="btn btn-info" onclick="if ($('#loginTwitter').val()!='') addSource('Twitter','#loginTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
+												<button type="button" class="btn btn-success" onclick="if ($('#loginTwitter').val()!='') addSource('Twitter','#loginTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -63,7 +63,7 @@
 												<div class="span1"></div>
 												<span class="add-on"><b>#</b></span>
 												<input name="inputSearch" type="text" class="inputSearch span9" id="searchTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holdertag' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#searchTwitter');return false;}else if(event.keyCode == 13){return false;}" />
-												<button type="button" class="btn btn-info" onclick="if ($('#searchTwitter').val()!='') addSource('Twitter','#searchTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
+												<button type="button" class="btn btn-success" onclick="if ($('#searchTwitter').val()!='') addSource('Twitter','#searchTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -83,7 +83,7 @@
 											<div class="span4"></div>
 											<div class="span4">
 												<div class="span1"></div>
-												<button id="addAllTwitter" class="btn btn-success span10" type="button" onclick="addAllSource('Twitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
+												<button id="addAllTwitter" class="btn btn-primary span10" type="button" onclick="addAllSource('Twitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
 													<%= raw t 'newmodal.sources.twitter.all' %>
 												</button>
 											</div>
@@ -108,7 +108,7 @@
 												<div class="span1"></div>
 												<span class="add-on"><i class="icon-search"></i></span>
 												<input name="inputSearch" id="searchRSS" type="text" class="inputSearch span9" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.rss.holderurl' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){addSource('RSS','#searchRSS');return false;}else if(event.keyCode == 13){return false;}">
-												<button type="button" class="btn btn-warning" onclick="if ($('#searchRSS').val()!='') addSource('RSS','#searchRSS');return false;"><%= raw t 'newmodal.sources.add' %></button>
+												<button type="button" class="btn btn-success" onclick="if ($('#searchRSS').val()!='') addSource('RSS','#searchRSS');return false;"><%= raw t 'newmodal.sources.add' %></button>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -133,7 +133,7 @@
 											</div>
 											<div class="span4">
 												<div class="span1"></div>
-												<button id="addAllRSS" class="btn btn-success span10" type="button" onclick="addAllSource('RSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
+												<button id="addAllRSS" class="btn btn-primary span10" type="button" onclick="addAllSource('RSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
 													<%= raw t 'newmodal.sources.rss.all' %>
 												</button>
 											</div>
