--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -55,7 +55,9 @@
 												<div class="span1"></div>
 												<span class="add-on"><b>@</b></span>
 												<input name="inputLogin" type="text" class="inputLogin span9" id="loginTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holderpersonn' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#loginTwitter');return false;}else if(event.keyCode == 13){return false;}">
-												<button type="button" class="btn btn-success" onclick="if ($('#loginTwitter').val()!='') addSource('Twitter','#loginTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
+												<button type="button" class="btn btn-success" onclick="if ($('#loginTwitter').val()!='') addSource('Twitter','#loginTwitter');return false;">
+													<%= raw t 'newmodal.sources.add' %>
+												</button>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -63,7 +65,9 @@
 												<div class="span1"></div>
 												<span class="add-on"><b>#</b></span>
 												<input name="inputSearch" type="text" class="inputSearch span9" id="searchTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holdertag' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#searchTwitter');return false;}else if(event.keyCode == 13){return false;}" />
-												<button type="button" class="btn btn-success" onclick="if ($('#searchTwitter').val()!='') addSource('Twitter','#searchTwitter');return false;"><%= raw t 'newmodal.sources.add' %></button>
+												<button type="button" class="btn btn-success" onclick="if ($('#searchTwitter').val()!='') addSource('Twitter','#searchTwitter');return false;">
+													<%= raw t 'newmodal.sources.add' %>
+												</button>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -108,7 +112,9 @@
 												<div class="span1"></div>
 												<span class="add-on"><i class="icon-search"></i></span>
 												<input name="inputSearch" id="searchRSS" type="text" class="inputSearch span9" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.rss.holderurl' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){addSource('RSS','#searchRSS');return false;}else if(event.keyCode == 13){return false;}">
-												<button type="button" class="btn btn-success" onclick="if ($('#searchRSS').val()!='') addSource('RSS','#searchRSS');return false;"><%= raw t 'newmodal.sources.add' %></button>
+												<button type="button" class="btn btn-success" onclick="if ($('#searchRSS').val()!='') addSource('RSS','#searchRSS');return false;">
+													<%= raw t 'newmodal.sources.add' %>
+												</button>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -185,10 +191,7 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
-						<h2><span class="numberFiltering bigNumberFiltering">1</span> <%= raw t 'newmodal.filtering.title' %>
-						<button class="btn btn-primary pull-right" type="button" onclick="reverseSwitchTab()">
-							<%= raw t 'newmodal.sources.reverseswitch' %>
-						</button></h2>
+						<h2><span class="numberFiltering bigNumberFiltering">1</span> <%= raw t 'newmodal.filtering.title' %></h2>
 					</div>
 				</div>
 				<div class="row-fluid">
