--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -87,7 +87,7 @@
 											<div class="span4"></div>
 											<div class="span4">
 												<div class="span1"></div>
-												<button id="addAllTwitter" class="btn btn-primary span10" type="button" onclick="addAllSource('Twitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
+												<button id="addAllTwitter" class="btn btn-info span10" type="button" onclick="addAllSource('Twitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
 													<%= raw t 'newmodal.sources.twitter.all' %>
 												</button>
 											</div>
@@ -133,13 +133,13 @@
 										<div class="row-fluid">
 											<div class="span1"></div>
 											<div class="span3">
-												<button class="btn btn-info span12" type="button" disabled>
+												<button class="btn btn-primary span12" type="button" disabled>
 													<%= raw t 'newmodal.sources.rss.yourrss' %>
 												</button>
 											</div>
 											<div class="span4">
 												<div class="span1"></div>
-												<button id="addAllRSS" class="btn btn-primary span10" type="button" onclick="addAllSource('RSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
+												<button id="addAllRSS" class="btn btn-info span10" type="button" onclick="addAllSource('RSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
 													<%= raw t 'newmodal.sources.rss.all' %>
 												</button>
 											</div>
