--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -127,4 +127,59 @@ a.label:visited{
 .borderLess{
   border:none;
 }
+
+#reminder{
+  transition: all 0.5s ease-in;
+  position: fixed;
+  height: 80%;
+  left: -37%;
+  top: 10%;
+  z-index: 50;
+}
+
+#reminder:hover{
+  transition: all 0.5s ease-in;
+  left: -1%;
+}
+
+.reminderSources{
+  height:100%;
+  border: 1px solid black;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: white;
+  z-index: 51;
+  padding-bottom:5px;
+  overflow:auto;
+}
+
+#openReminder{
+  transition: left 0.5s ease-in;
+  position: relative;
+  background-color: #f5f5f5;
+  color: #0088cc;
+  border: solid 1px;
+  border-top-right-radius: 35px;
+  border-bottom-right-radius: 35px;
+  padding-top:2%;
+  padding-bottom:2%;
+  padding-left:2%;
+  padding-right:3%;
+  margin-left: -1px;
+  font-size: 20px;
+  z-index: 50;
+}
+
+#transparentDiv{
+  background-color:transparent;
+  position:relative;
+  min-height: 100px;
+  height: 42%;
+}
+
+.summary{
+  max-height:200px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
   
