--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -27,27 +27,97 @@ event.preventDefault(); // Prevent link from following its href
 <span id="rss-button" class="btn btn-warning btn-large btn-primary goButton"><i class="icon-rss"></i></span>
 <%end%>
 <div class="row-fluid">
-<div class="btn-group pull-right">
-	<button id="btnList" class="btn active" onclick="changeItemFormat('list');"><i class="icon icon-th-list"></i></button>
-	<button id="btnCard" class="btn" onclick="changeItemFormat('card');"><i class="icon icon-th-large"></i></button>
-</div>
+	<div class="btn-group pull-right">
+		<button id="btnList" class="btn active" onclick="changeItemFormat('list');">
+			<i class="icon icon-th-list"></i>
+		</button>
+		<button id="btnCard" class="btn" onclick="changeItemFormat('card');">
+			<i class="icon icon-th-large"></i>
+		</button>
+	</div>
 </div>
 
 <hr>
 
 <div class="row-fluid">
-<% id=0; @items.each do |item| %>
-<div class="well item-bloc">
-	<div class="item_container" sourceid="<%= id %>"></div>
-	<div class="item_wait" sourceid="<%= id%>">
-		<a href="<%= item.localURI%>"><i class=" icon-refresh"></i></a>
-		<a href="<%= item.uri%>"><%= item.title%></a>
-
+	<div id="reminder" class="span5">
+		<div class="span11 reminderSources">
+			<div class="row-fluid">
+				<div class="span1"></div>
+				<div class="span10">
+					<div class="row-fluid">
+						<h3><%= raw t 'newmodal.breadcrumb.sources' %></h3>
+					</div>
+					<div class="row-fluid">
+						<div class="well summary span12">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span1"></div>
+				<div class="span10">
+					<div class="row-fluid">
+						<h3><%= raw t 'newmodal.breadcrumb.filtering' %></h3>
+					</div>
+					<div class="row-fluid">
+						<p><b><%= raw t 'newmodal.filtering.buttonOption' %></b></p>
+					</div>
+					<div class="row-fluid">
+						<div id="summaryOr" class="well summary span12 well-info">
+						</div>
+					</div>
+					<div class="row-fluid">
+						<p><b><%= raw t 'newmodal.filtering.buttonMusthave' %></b></p>
+					</div>
+					<div class="row-fluid">
+						<div id="summaryAnd" class="well summary span12 well-success">
+						</div>
+					</div>
+					<div class="row-fluid">
+						<p><b><%= raw t 'newmodal.filtering.buttonBan' %></b></p>
+					</div>
+					<div class="row-fluid">
+						<div id="summaryWithout" class="well summary span12 well-danger">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row-fluid bottomDiv">
+				<div class="span1"></div>
+				<div class="span4">
+					<button class="btn btn-info span12" type="button" disabled>
+						Enregistrer
+					</button>
+				</div>
+				<div class="span2"></div>
+				<div class="span4">
+					<button class="btn btn-success span12" type="button">
+						Actualiser
+					</button>
+				</div>
+			</div>
+		</div>
+		<div id="transparentDiv" class="span1"></div>
+		<div id="openReminder" class="span1">
+			<i class="icon-chevron-right"></i>
+		</div>
 	</div>
 </div>
 
-<% id+=1; end %>
+<div class="row-fluid">
+	<% id=0; @items.each do |item| %>
+	<div class="well item-bloc">
+		<div class="item_container" sourceid="<%= id %>"></div>
+		<div class="item_wait" sourceid="<%= id%>">
+			<a href="<%= item.localURI%>"><i class=" icon-refresh"></i></a>
+			<a href="<%= item.uri%>"><%= item.title%></a>
+
+		</div>
+	</div>
+
+	<% id+=1; end %>
 </div>
- <div class="span12">
-<%= will_paginate @page_results %>
+<div class="span12">
+	<%= will_paginate @page_results %>
 </div>
