--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -144,13 +144,14 @@ a.label:visited{
 
 .reminderSources{
   height:100%;
-  border: 1px solid black;
+  border: 1px solid #0088cc;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   background-color: white;
   z-index: 51;
   padding-bottom:5px;
   overflow:auto;
+  box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7); 
 }
 
 #openReminder{
@@ -159,10 +160,10 @@ a.label:visited{
   background-color: #f5f5f5;
   color: #0088cc;
   border: solid 1px;
-  border-top-right-radius: 35px;
-  border-bottom-right-radius: 35px;
-  padding-top:2%;
-  padding-bottom:2%;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  padding-top:4%;
+  padding-bottom:4%;
   padding-left:2%;
   padding-right:3%;
   margin-left: -1px;
