--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -87,13 +87,13 @@ event.preventDefault(); // Prevent link from following its href
 				<div class="span1"></div>
 				<div class="span4">
 					<button class="btn btn-info span12" type="button" disabled>
-						Enregistrer
+						<%= raw t 'items.reminder.change' %>
 					</button>
 				</div>
 				<div class="span2"></div>
 				<div class="span4">
 					<button class="btn btn-success span12" type="button">
-						Actualiser
+						<%= raw t 'items.reminder.update' %>
 					</button>
 				</div>
 			</div>
