--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -46,7 +46,7 @@ event.preventDefault(); // Prevent link from following its href
 				<div class="span1"></div>
 				<div class="span10">
 					<div class="row-fluid">
-						<h3><%= raw t 'newmodal.breadcrumb.sources' %></h3>
+						<h3><span class="numberFiltering smallNumberFiltering">1</span> <%= raw t 'newmodal.breadcrumb.sources' %></h3>
 					</div>
 					<div class="row-fluid">
 						<div class="well summary span12">
@@ -54,11 +54,12 @@ event.preventDefault(); // Prevent link from following its href
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="row-fluid">
 				<div class="span1"></div>
 				<div class="span10">
 					<div class="row-fluid">
-						<h3><%= raw t 'newmodal.breadcrumb.filtering' %></h3>
+						<h3><span class="numberFiltering smallNumberFiltering">2</span> <%= raw t 'newmodal.breadcrumb.filtering' %></h3>
 					</div>
 					<div class="row-fluid">
 						<p><b><%= raw t 'newmodal.filtering.buttonOption' %></b></p>
@@ -83,14 +84,9 @@ event.preventDefault(); // Prevent link from following its href
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="row-fluid bottomDiv">
-				<div class="span1"></div>
-				<div class="span4">
-					<button class="btn btn-info span12" type="button" disabled>
-						<%= raw t 'items.reminder.change' %>
-					</button>
-				</div>
-				<div class="span2"></div>
+				<div class="span7"></div>
 				<div class="span4">
 					<button class="btn btn-success span12" type="button">
 						<%= raw t 'items.reminder.update' %>
