Changed the layout of the filtering selection

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -203,7 +203,13 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
-						<h2><span class="numberFiltering bigNumberFiltering">1</span> <%= raw t 'newmodal.filtering.title' %></h2>
+						<h2><%= raw t 'newmodal.filtering.title' %></h2>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<h3><span class="numberFiltering smallNumberFiltering">1</span> <%= raw t 'newmodal.filtering.subtitle' %></h3>
 					</div>
 				</div>
 				<div class="row-fluid">
