Changed the color button

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -179,7 +179,7 @@
 				<div class="row-fluid">
 					<div class="span4"></div>
 					<div class="span4">
-						<button class="btn span12" type="button"  onclick="switchTab()">
+						<button class="btn btn-success span12" type="button"  onclick="switchTab()">
 							<h3><%= raw t 'newmodal.sources.gofiltering' %></h3>
 						</button>
 					</div>
@@ -193,7 +193,7 @@
 				<div class="row-fluid">
 					<div class="span4"></div>
 					<div class="span4">
-						<button class="btn btn-success span12 goItem" type="submit" onclick="movingData()">
+						<button class="btn span12 goItem" type="submit" onclick="movingData()">
 							<h3><%= raw t 'newmodal.sources.goreador' %></h3>
 						</button>
 					</div>
