--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -36,7 +36,7 @@ jwplayer("<%= image%>
         end
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
-			<a class="titleItem" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a> 
+			<a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a> 
 			<button class="btn row-favorite" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>"><i class="icon icon-tag"></i></button>
 			<button class="btn btnFavorite row-favorite" disabled><i class="icon icon-heart"></i></button>
 			<button class="btn btnMarkasRead row-favorite" disabled><i class="icon icon-check"></i></button>
