--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -50,12 +50,10 @@ jwplayer("<%= image%>
 			<i>
 			<%= begin
 				date = DateTime.parse(@item.props["http://purl.org/rss/1.0/pubDate"][0])
-date.strftime('Le %d/%m/%Y à %H:%M - ')
+date.strftime('Le %d/%m/%Y à %H:%M')
           
         rescue
         end %></i>
-        <a class="sourceHover" href="<%= @item.uri %>"><i><%=getTitleSource(@item.uri)%></i></a>
-        <a class="sourceHoverFull" href="<%= @item.uri %>" style="display:none"><i><%=@item.uri%></i></a>	
         </div>
         <div class="row-fluid">
 		
