[#53469053] now search is working on first draft

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -1,5 +1,13 @@
 <%= render 'home/search'%>
 
+<%= @search.to_json %>
+<%= @search.sources.to_json %>
+<%= @search.filters.to_json %>
+<hr/>
+
+<%= raw h(@sparqlRequest).gsub(/\n/, '<br/>') %>
+<hr/>
+
 <%= javascript_tag do %>
 query = '<%= j items_path(:old => @filters) %>';
 <% end %>
