--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -1,12 +1,15 @@
 <%= render 'home/search'%>
 
-<%= @search.to_json %>
+<% if Rails.env.development?%>
+  <%= @search.to_json %>
 <%= @search.sources.to_json %>
 <%= @search.filters.to_json %>
 <hr/>
 
+
 <%= raw h(@sparqlRequest).gsub(/\n/, '<br/>') %>
 <hr/>
+<%end%>
 
 <%= javascript_tag do %>
 query = '<%= j items_path(:old => @filters) %>';
