--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -62,21 +62,21 @@ event.preventDefault(); // Prevent link from following its href
 						<h3><span class="numberFiltering smallNumberFiltering">2</span> <%= raw t 'newmodal.breadcrumb.filtering' %></h3>
 					</div>
 					<div class="row-fluid">
-						<p><b><%= raw t 'newmodal.filtering.buttonOption' %></b></p>
+						<p><b id="titleOr"><%= raw t 'newmodal.filtering.buttonOption' %></b></p>
 					</div>
 					<div class="row-fluid">
 						<div id="summaryOr" class="well summary span12 well-info">
 						</div>
 					</div>
 					<div class="row-fluid">
-						<p><b><%= raw t 'newmodal.filtering.buttonMusthave' %></b></p>
+						<p><b id="titleAnd"><%= raw t 'newmodal.filtering.buttonMusthave' %></b></p>
 					</div>
 					<div class="row-fluid">
 						<div id="summaryAnd" class="well summary span12 well-success">
 						</div>
 					</div>
 					<div class="row-fluid">
-						<p><b><%= raw t 'newmodal.filtering.buttonBan' %></b></p>
+						<p><b id="titleWithout"><%= raw t 'newmodal.filtering.buttonBan' %></b></p>
 					</div>
 					<div class="row-fluid">
 						<div id="summaryWithout" class="well summary span12 well-danger">
