Add a popover on the summary box

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -95,7 +95,7 @@ event.preventDefault(); // Prevent link from following its href
 			</div>
 		</div>
 		<div id="transparentDiv" class="span1"></div>
-		<div id="openReminder" class="span1">
+		<div id="openReminder" class="span1" data-toggle="popover" data-placement="right" data-content="<%= raw t 'items.popover.content' %>" title="" data-original-title="<%= raw t 'items.popover.title' %>">
 			<i class="icon-chevron-right"></i>
 		</div>
 	</div>
