Changed the title of the popover of the tag

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -34,6 +34,7 @@ event.preventDefault(); // Prevent link from following its href
 		<button id="btnCard" class="btn" onclick="changeItemFormat('card');">
 			<i class="icon icon-th-large"></i>
 		</button>
+		<div id="titlePopover" hidden><%= raw t 'items.popover.smalltitle' %></div>
 	</div>
 </div>
 
