--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -62,8 +62,8 @@ date.strftime('Le %d/%m/%Y à %H:%M')
     			@item.props["http://purl.org/rss/1.0/description"][0].html_safe end %>
 		</div>
 		<div class="row-fluid">
-			<span class="showTag pointerMouse"><i>+ Tags</i></span>
-			<span class="hideTag pointerMouse"><i>- Tags</i></span>
+			<span class="showTag pointerMouse"><i><b>+ Tags</b></i></span>
+			<span class="hideTag pointerMouse"><i><b>- Tags</b></i></span>
 		</div>
 		<div class="btn-toolbar">
 			
