--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -35,20 +35,20 @@ jwplayer("<%= image%>
           thumb="assets/foregroundRSS.png"
         end
 %>
-			<div><img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
-			<a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a> 
-			<span class="showFavorite">Action</span></div>
-			<div class="row-favorite">
-			<button class="btn" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>"><i class="icon icon-tag"></i></button>
-			<button class="btn btnFavorite" disabled><i class="icon icon-heart"></i></button>
-			<button class="btn btnMarkasRead" disabled><i class="icon icon-check"></i></button>
-			<span class="separationLine" ></span>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-via="zone_news" data-count="none" data-text="<%= @item.props["http://purl.org/rss/1.0/title"][0]%>" data-url="<%= @item.uri %>">Tweet</a>
-			<div class="g-plus" data-action="share" data-annotation="none" data-href="<%= @item.uri %>"></div>
+			<div>
+				<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
+				<a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a> 
+				<span class="showFavorite"><i class="icon-share-alt"></i></span>
+				<span class="row-favorite">
+					<span class="hideFavorite"><i class="icon-chevron-left"></i></span>
+					<button class="btn" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>"><i class="icon icon-tag"></i></button>
+					<button class="btn btnFavorite" disabled><i class="icon icon-heart"></i></button>
+					<button class="btn btnMarkasRead" disabled><i class="icon icon-check"></i></button>
+					<span class="separationLine" ></span>
+					<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-via="zone_news" data-count="none" data-text="<%= @item.props["http://purl.org/rss/1.0/title"][0]%>" data-url="<%= @item.uri %>">Tweet</a>
+					<div class="g-plus" data-action="share" data-annotation="none" data-href="<%= @item.uri %>"></div>
+				</span>
 			</div>
-
-			<br>
-			
 			<i>
 			<%= begin
 				date = DateTime.parse(@item.props["http://purl.org/rss/1.0/pubDate"][0])
