--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -38,6 +38,7 @@ event.preventDefault(); // Prevent link from following its href
 <span id="rss-button" class="btn btn-warning btn-large btn-primary goButton"><i class="icon-rss"></i></span>
 <%end%>
 <div class="row-fluid">
+  <span class=""><%= @itemsNumber %></span>
 	<div class="btn-group pull-right">
 		<button id="btnList" class="btn active" onclick="changeItemFormat('list');">
 			<i class="icon icon-th-list"></i>
