--- a/ZONE-watcher/app/views/items/_reminder_panel.html.erb
+++ b/ZONE-watcher/app/views/items/_reminder_panel.html.erb
@@ -1,3 +1,4 @@
+<form action="/searches" method="POST" id="formModal">
 <div class="row-fluid">
 	<div id="reminder" class="span5">
 		<div class="span11 reminderSources">
@@ -8,7 +9,7 @@
 						<h3><span class="numberFiltering smallNumberFiltering">1</span> <%= raw t 'newmodal.breadcrumb.sources' %></h3>
 					</div>
 					<div class="row-fluid">
-                      <div class="well summary span12">
+                      <div id="wellSources" class="well summary span12">
                         <% @search.sources.each do |source| %>
                           <%= raw source.getButton %>
                         <%end%>
@@ -60,7 +61,7 @@
 			<div class="row-fluid bottomDiv">
 				<div class="span7"></div>
 				<div class="span4">
-					<button class="btn btn-success span12" type="button">
+					<button class="btn btn-success span12" type="submit" onclick="movingData()">
 						<%= raw t 'items.reminder.update' %>
 					</button>
 				</div>
@@ -70,5 +71,7 @@
 		<div id="openReminder" class="span1" data-toggle="popover" data-placement="right" data-content="<%= raw t 'items.popover.content' %>" title="" data-original-title="<%= raw t 'items.popover.title' %>">
 			<i class="icon-chevron-right"></i>
 		</div>
+		<div id="movedData"></div>
 	</div>
 </div>
+</form>
