--- a/ZONE-watcher/app/views/searches/edit.html.erb
+++ b/ZONE-watcher/app/views/searches/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing search</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @search %> |
-<%= link_to 'Back', searches_path %>
+<%= render 'form', :type => "edit" %>
