--- a/ZONE-watcher/app/views/home/_search_tool.html.erb
+++ b/ZONE-watcher/app/views/home/_search_tool.html.erb
@@ -7,7 +7,7 @@
 
 		<div class="row-fluid">
 			<div class="span12 btn-marged">
-				<a href="/home/search">
+				<a href="/searches/new">
 				<button type="button" class="btn btn-success span12">
 					<h2><%= raw t 'search.gobutton' %></h2>
 				</button></a>
