--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -1,29 +1,342 @@
-<%= form_for(@search) do |f| %>
-  <% if @search.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@search.errors.count, "error") %> prohibited this search from being saved:</h2>
-
-      <ul>
-      <% @search.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<form action="/searches" method="POST" id="formModal">
+<div class="row-fluid">
+  <div class="span1"></div>
+  <div class="span10">
+    <ul class="breadcrumb">
+      <li id="breadcrumbSources" class="active" onclick="reverseSwitchTab()">
+        <%= raw t 'newmodal.breadcrumb.sources' %><span class="divider"><i class="icon-chevron-right"></i></span>
+      </li>
+      <li id="breadcrumbFiltering" onclick="switchTab()">
+        <%= raw t 'newmodal.breadcrumb.filtering' %><span class="divider"><i class="icon-chevron-right"></i></span>
+      </li>
+      <li onclick="movingData();submit()">
+        <%= raw t 'newmodal.breadcrumb.results' %>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="row-fluid">
+<div class="tab-content">
+<div class="tab-pane active" id="sources">
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <h2><%= raw t 'newmodal.sources.title' %></h2>
     </div>
-  <% end %>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <div class="row-fluid">
+        <div class="span1"></div>
+        <div class="span2" id="imgTwitter">
+          <img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundTwitter.png" onclick="slideDown('#formTwitter');"/>
+        </div>
+        <div class="span2"></div>
+        <div class="span2" id="imgGoogle">
+          <img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundGoogleGray.png"/>
+        </div>
+        <div class="span2"></div>
+        <div class="span2" id="imgRSS">
+          <img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundRSS.png" onclick="slideDown('#formRSS');"/>
+        </div>
+      </div>
+      <div id="formTwitter" class="row-fluid form" hidden>
+        <div class="span1"></div>
+        <div class="span10">
+          <div class="contentTwitter" >
+            <div class="formHeader twitter">
+              <div class="span1"></div>
+              <h3 class="titleHeader">Twitter</h3>
+            </div>
+            <div class="formContent">
+              <div class="row-fluid">
+                <div class="span12 input-prepend input-append">
+                  <div class="span1"></div>
+                  <span class="add-on"><b>@</b></span>
+                  <input name="inputLogin" type="text" class="inputLogin span9" id="loginTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holderpersonn' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#loginTwitter');return false;}else if(event.keyCode == 13){return false;}">
+                  <button type="button" class="btn btn-success" onclick="if ($('#loginTwitter').val()!='') addSource('Twitter','#loginTwitter');return false;">
+                    <%= raw t 'newmodal.sources.add' %>
+                  </button>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span12 input-prepend input-append">
+                  <div class="span1"></div>
+                  <span class="add-on"><b>#</b></span>
+                  <input name="inputSearch" type="text" class="inputSearch span9" id="searchTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holdertag' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){ addSource('Twitter','#searchTwitter');return false;}else if(event.keyCode == 13){return false;}" />
+                  <button type="button" class="btn btn-success" onclick="if ($('#searchTwitter').val()!='') addSource('Twitter','#searchTwitter');return false;">
+                    <%= raw t 'newmodal.sources.add' %>
+                  </button>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                  <div class="span4">
+                    <hr>
+                  </div>
+                  <div class="span4 text-center">
+                    <h4 class="black"><%= raw t 'newmodal.sources.separator' %></h4>
+                  </div>
+                  <div class="span4">
+                    <hr>
+                  </div>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span4"></div>
+                <div class="span4">
+                  <div class="span1"></div>
+                  <button id="addAllTwitter" class="btn btn-info span10" type="button" onclick="addAllSource('Twitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
+                    <%= raw t 'newmodal.sources.twitter.all' %>
+                  </button>
+                </div>
+              </div>
 
-  <div class="field">
-    <%= f.label :sources %><br />
-    <%= f.text_field :sources %>
+            </div>
+            <!--formContent twiiter-->
+          </div>
+        </div>
+      </div>
+      <div id="formRSS" class="row-fluid form" hidden>
+        <div class="span1"></div>
+        <div class="span10">
+          <div class="contentRSS">
+            <div class="formHeader rss">
+              <div class="span1"></div>
+              <h3 class="titleHeader">RSS</h3>
+            </div>
+            <div class="formContent">
+              <div class="row-fluid">
+                <div class="span12 input-prepend input-append">
+                  <div class="span1"></div>
+                  <span class="add-on"><i class="icon-search"></i></span>
+                  <input name="inputSearch" id="searchRSS" type="text" class="inputSearch span9" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.rss.holderurl' %>" onKeyPress="if (event.keyCode == 13 && $(this).val()!=''){addSource('RSS','#searchRSS');return false;}else if(event.keyCode == 13){return false;}">
+                  <button type="button" class="btn btn-success" onclick="if ($('#searchRSS').val()!='') addSource('RSS','#searchRSS');return false;">
+                    <%= raw t 'newmodal.sources.add' %>
+                  </button>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                  <div class="span4">
+                    <hr>
+                  </div>
+                  <div class="span4 text-center">
+                    <h4 class="black"><%= raw t 'newmodal.sources.separator' %></h4>
+                  </div>
+                  <div class="span4">
+                    <hr>
+                  </div>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span1"></div>
+                <div class="span3">
+                  <button class="btn btn-primary span12" type="button" disabled>
+                    <%= raw t 'newmodal.sources.rss.yourrss' %>
+                  </button>
+                </div>
+                <div class="span4">
+                  <div class="span1"></div>
+                  <button id="addAllRSS" class="btn btn-info span10" type="button" onclick="addAllSource('RSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
+                    <%= raw t 'newmodal.sources.rss.all' %>
+                  </button>
+                </div>
+                <div class="span3">
+                  <button class="btn btn-danger span12" type="button" disabled>
+                    <%= raw t 'newmodal.sources.rss.opml' %>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!--formContent twiiter-->
+          </div>
+        </div>
+      </div>
+    </div><!--span12 -->
+  </div><!--row-fluid -->
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <div class="row-fluid">
+        <div class="span1"></div>
+        <div class="span10">
+          <h3><%= raw t 'newmodal.sources.choice' %></h3>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :filters %><br />
-    <%= f.text_field :filters %>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10 ">
+      <div class="row-fluid">
+        <div class="span1"></div>
+        <div id="wellSources" class="span10 well">
+          <%@search.sources.each do |source| %>
+            <%= raw source.getButton%>
+          <%end%>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
+  <div class="row-fluid">
+    <div class="span4"></div>
+    <div class="span4">
+      <button class="btn btn-success span12" type="button"  onclick="switchTab()">
+        <h3><%= raw t "newmodal.sources.go#{type}filtering" %></h3>
+      </button>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <hr>
+    </div>
   </div>
-<% end %>
+  <div class="row-fluid">
+    <div class="span4"></div>
+    <div class="span4">
+      <button class="btn span12 goItem" type="submit" onclick="movingData()">
+        <h3><%= raw t 'newmodal.sources.goreador' %></h3>
+      </button>
+    </div>
+  </div>
+</div><!--tab-pane -->
+<div class="tab-pane" id="filtering">
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <h2><%= raw t 'newmodal.filtering.title' %></h2>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <h3><span class="numberFiltering smallNumberFiltering">1</span> <%= raw t 'newmodal.filtering.subtitle' %></h3>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <div class="row-fluid">
+        <input class="span12" id="keyword" type="text" placeholder="<%= raw t 'newmodal.filtering.title' %>" onkeypress="if (event.keyCode == 13) return false;" onkeyup="askUpdateKeywordTable();return false;">
+      </div>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <div class="row-fluid">
+        <div class="span8">
+          <div class="row-fluid">
+            <div class="span12">
+              <h3><span class="numberFiltering smallNumberFiltering">2</span> <%= raw t 'newmodal.filtering.related' %></h3>
+            </div>
+          </div>
+          <div class="row-fluid">
+            <div class="span12">
+              <div class="keywordOverflow">
+                <div id="progressBarFiltering" class="progress progress-striped active">
+                  <div class="bar bar-success span12"></div>
+                </div>
+                <table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
+                  <tbody></tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="span4">
+          <div class="row-fluid">
+            <div class="span12">
+              <h3><span class="numberFiltering smallNumberFiltering">3</span> <%= raw t 'newmodal.filtering.filtertype' %></h3>
+            </div>
+          </div>
+          <div class="row-fluid">
+            <button class="btn btn-info span12 marged" type="button" onclick="addFilter('or');return false">
+              <h4 class="white"><%= raw t 'newmodal.filtering.buttonOption' %></h4>
+            </button>
+          </div>
+          <div class="row-fluid">
+            <button class="btn btn-success span12 marged" type="button" onclick="addFilter('and');return false">
+              <h4 class="white"><%= raw t 'newmodal.filtering.buttonMusthave' %></h4>
+            </button>
+          </div>
+          <div class="row-fluid">
+            <button class="btn btn-danger span12" type="button" onclick="addFilter('without');return false">
+              <h4 class="white"><%= raw t 'newmodal.filtering.buttonBan' %></h4>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <hr>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <h4 class="black"><%= raw t 'newmodal.filtering.resume.option' %></h4>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div id="wellOr" class="span10 well well-info">
+      <%@search.getOrFilters.each do |filter| %>
+          <%= raw filter.getButton%>
+      <%end%>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <h4 class="black"><%= raw t 'newmodal.filtering.resume.musthave' %></h4>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div id="wellAnd" class="span10 well well-success">
+      <%@search.getAndFilters.each do |filter| %>
+          <%= raw filter.getButton%>
+      <%end%>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <h4 class="black"><%= raw t 'newmodal.filtering.resume.ban' %></h4>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div id="wellWithout" class="span10 well well-danger">
+      <%@search.getWithoutFilters.each do |filter| %>
+          <%= raw filter.getButton%>
+      <%end%>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"></div>
+    <div class="span10">
+      <hr>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span4"></div>
+    <div class="span4">
+      <button class="btn btn-success span12 goItem" type="submit" onclick="movingData()">
+        <h3><%= raw t 'newmodal.sources.goreador' %></h3>
+      </button>
+    </div>
+  </div>
+</div>
+<!--Pane-filtering-->
+</div>
+</div>
+<div id="movedData"></div>
+</form>
