Changed some title

--- a/ZONE-watcher/app/views/items/_reminder_panel.html.erb
+++ b/ZONE-watcher/app/views/items/_reminder_panel.html.erb
@@ -26,7 +26,7 @@
 						<h3><span class="numberFiltering smallNumberFiltering">2</span> <%= raw t 'newmodal.breadcrumb.filtering' %></h3>
 					</div>
 					<div class="row-fluid">
-						<p><b id="titleOr"><%= raw t 'newmodal.filtering.buttonOption' %></b></p>
+						<p><b id="titleOr"><%= raw t 'newmodal.filtering.resume.option' %></b></p>
 					</div>
 					<div class="row-fluid">
 						<div id="summaryOr" class="well summary span12 well-info">
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 					<div class="row-fluid">
-						<p><b id="titleAnd"><%= raw t 'newmodal.filtering.buttonMusthave' %></b></p>
+						<p><b id="titleAnd"><%= raw t 'newmodal.filtering.resume.musthave' %></b></p>
 					</div>
 					<div class="row-fluid">
 						<div id="summaryAnd" class="well summary span12 well-success">
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 					<div class="row-fluid">
-						<p><b id="titleWithout"><%= raw t 'newmodal.filtering.buttonBan' %></b></p>
+						<p><b id="titleWithout"><%= raw t 'newmodal.filtering.resume.ban' %></b></p>
 					</div>
 					<div class="row-fluid">
 						<div id="summaryWithout" class="well summary span12 well-danger">
