Correct a bug in the icon of the items

--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -29,7 +29,7 @@ jwplayer("<%= image%>
 		<%else%>
 		<%end%>
 		<div class="row-fluid">
-			<% if @item.uri.starts_with?('http://twitter.com')
+			<% if @item.uri.starts_with?('https://twitter.com')
         thumb="assets/twitter.png"
       else
         thumb="assets/foregroundRSS.png"
