Put the share bar in a group bar
Now, the buttons won't split

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -219,3 +219,9 @@ a.label:visited{
 #updateSearch{
   transition: opacity 0.1s ease;
 }
+
+.btn-group>.btn-share{
+  margin-right:4px;
+  margin-top:2px;
+  border-radius:5px;
+}
