--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -39,23 +39,23 @@ jwplayer("<%= image%>
 				<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
 				<a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a>
 				<span class="showFavorite"><i class="icon-share pointerMouse"></i></span>
-				<span class="row-favorite"> 
-					<button class="btn" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>">
+				<span class="row-favorite btn-group"> 
+					<button class="btn btn-share" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>">
 						<i class="icon icon-tag"></i>
 					</button>
-					<button class="btn btnFavorite" disabled>
+					<button class="btn btnFavorite btn-share" disabled>
 						<i class="icon icon-heart"></i>
 					</button>
-					<button class="btn btnMarkasRead" disabled>
+					<button class="btn btnMarkasRead btn-share" disabled>
 						<i class="icon icon-check"></i>
 					</button> 
-					<a class="shareLink" href="https://www.facebook.com/sharer.php?u=<%= @item.uri %>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
+					<a class="shareLink btn-share" href="https://www.facebook.com/sharer.php?u=<%= @item.uri %>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
 						<img class="littleCircleImage"src="assets/foregroundFB.png" height=30 width=30/>
 					</a>
-					<a class="shareLink" href="https://plus.google.com/share?url=<%= @item.uri %>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
+					<a class="shareLink btn-share" href="https://plus.google.com/share?url=<%= @item.uri %>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
 						<img class="littleCircleImage"src="assets/foregroundGoogle.png" alt="Share on Google+" height=30 width=30/>
 					</a>
-					<a class="shareLink" href="https://twitter.com/share?url=<%= @item.uri %>&via=readornet&text=<%= @item.props["http://purl.org/rss/1.0/title"][0]%>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
+					<a class="shareLink btn-share" href="https://twitter.com/share?url=<%= @item.uri %>&via=readornet&text=<%= @item.props["http://purl.org/rss/1.0/title"][0]%>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
 						<img class="littleCircleImage" src="assets/foregroundTwitter.png" height=30 width=30>
 					</a> 
 				</span>
