Truncate the text to 300 caracters

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -225,3 +225,8 @@ a.label:visited{
   margin-top:2px;
   border-radius:5px;
 }
+
+.truncate_more_link:hover{
+  background:none;
+  color:black;
+}
