--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -53,7 +53,7 @@ event.preventDefault(); // Prevent link from following its href
 <hr>
 
 <%= render "reminder_panel"%>
-
+<div class="items-box">
 <div class="row-fluid">
 	<% id=0; @items.each do |item| %>
 	<div class="well item-bloc">
@@ -69,4 +69,5 @@ event.preventDefault(); // Prevent link from following its href
 </div>
 <div class="span12">
 	<%= will_paginate @page_results %>
+</div>
 </div>
