--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -71,7 +71,8 @@ jwplayer("<%= image%>
 
 			<div class="contentArticle">
 				<%= if @item.props["http://purl.org/rss/1.0/description"] != nil
-        @item.props["http://purl.org/rss/1.0/description"][0].html_safe end %>
+        			@item.props["http://purl.org/rss/1.0/description"][0].html_safe 
+        		end %>
 			</div>
 			<div class="row-fluid">
 				<span class="showTag pointerMouse"><i><b>+ Tags</b></i></span>
