Added a tooltip on the all twitter sources

--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -87,7 +87,7 @@
                 <div class="span4"></div>
                 <div class="span4">
                   <div class="span1"></div>
-                  <button id="addAllTwitter" class="btn btn-info span10" type="button" onclick="addAllSource('Twitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
+                  <button id="addAllTwitter" class="btn btn-info span10" type="button" title="<%= raw t 'newmodal.sources.twitter.tooltip' %>" onclick="addAllSource('Twitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
                     <%= raw t 'newmodal.sources.twitter.all' %>
                   </button>
                 </div>
