[#54263822] change on sources listing in order to make filtering on them

--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -40,7 +40,7 @@
           <% filter = Filter.new(:prop => "http://purl.org/rss/1.0/source",:value => source.uri) %>
           <% uriNumber = filters_getNumber_path(:old => [filter]) %>
       <tr>
-        <td><%= link_to source.uri, items_path(:new => filter) %></td>
+        <td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
         <td>
           (
           <span class="number_items_wait">
