--- a/ZONE-watcher/app/views/items/_reminder_panel.html.erb
+++ b/ZONE-watcher/app/views/items/_reminder_panel.html.erb
@@ -29,7 +29,7 @@
 						<p><b id="titleOr"><%= raw t 'newmodal.filtering.resume.option' %></b></p>
 					</div>
 					<div class="row-fluid">
-						<div id="summaryOr" class="well summary span12 well-info">
+						<div id="summaryOr" class="well summary span12 well-info" ondrop="drop(event)" ondragover="allowDrop(event)">
                           <% @search.getOrFilters.each do |filter| %>
                             <%= raw filter.getButton%>
                           <%end%>
@@ -39,7 +39,7 @@
 						<p><b id="titleAnd"><%= raw t 'newmodal.filtering.resume.musthave' %></b></p>
 					</div>
 					<div class="row-fluid">
-						<div id="summaryAnd" class="well summary span12 well-success">
+						<div id="summaryAnd" class="well summary span12 well-success" ondrop="drop(event)" ondragover="allowDrop(event)">
                           <% @search.getAndFilters.each do |filter| %>
                               <%= raw filter.getButton%>
                           <%end%>
@@ -49,7 +49,7 @@
 						<p><b id="titleWithout"><%= raw t 'newmodal.filtering.resume.ban' %></b></p>
 					</div>
 					<div class="row-fluid">
-						<div id="summaryWithout" class="well summary span12 well-danger">
+						<div id="summaryWithout" class="well summary span12 well-danger" ondrop="drop(event)" ondragover="allowDrop(event)">
                           <% @search.getWithoutFilters.each do |filter| %>
                               <%= raw filter.getButton%>
                           <%end%>
