Changed the optionnal feature with color
Now change the color when the similarity is between 1 .. 2 or 3 ... 4 or
more than 4

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -230,3 +230,15 @@ a.label:visited{
   background:none;
   color:black;
 }
+
+.lowSimilarity{
+  border-left: 6px solid #a6bede;
+}
+
+.mediumSimilarity{
+  border-left: 6px solid #428bca;
+}
+
+.highSimilarity{
+  border-left: 6px solid #002342;
+}
