--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -232,13 +232,13 @@ a.label:visited{
 }
 
 .lowSimilarity{
-  border-left: 6px solid #a6bede;
+  border: 2px solid #87cfe9;
 }
 
 .mediumSimilarity{
-  border-left: 6px solid #428bca;
+  border: 3px solid #007e9d;
 }
 
 .highSimilarity{
-  border-left: 6px solid #002342;
+  border: 4px solid #002342;
 }
