changed the name of the modal

--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -144,10 +144,10 @@
                         </button>
                       </div>
                       <div class="span3">
-                        <button href="#myModal" class="btn btn-danger span12" type="button" data-toggle="modal">
+                        <button href="#modalopml" class="btn btn-danger span12" type="button" data-toggle="modal">
                           <%= raw t 'newmodal.sources.rss.opml' %>
                         </button>
-                        <div id="myModal" class="modal hide fade">
+                        <div id="modalopml" class="modal hide fade">
                           <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                               &times;
