Corrected a typo error

--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -179,7 +179,7 @@
                       </div>
                     </div>
                   </div>
-                  <!--formContent twiiter-->
+                  <!--formContent twitter-->
                 </div>
               </div>
             </div>
